argocd/argocd_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations: 
    traefik.ingress.kubernetes.io/router.entrypoints: web # This annotation specifies that the Ingress should be handled by the Traefik ingress controller on the "web" entry point. Adjust this value based on your Traefik configuration if necessary.
spec:
  ingressClassName: traefik # This specifies that the Ingress should be handled by the Traefik ingress controller. Ensure that this matches the name of your Traefik ingress class.
  rules:
  - host: "argocd.my-cicd-one.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
